# push_swap

./: .test.sh.swp  2600-0.txt  CMakeLists.txt  Makefile  a.out  auxiliary_functions.c  checker  checker.c  errorstempfile.txt  file.txt  file_operat.txt  fucking_fail.txt  get_next_line.c  get_next_line.h  get_next_line.h.gch  main.c  main1.c  make.sh  moves.c  my_tests.sh  name_f  push_swap  push_swap.c  push_swap.h  resulttempfile.txt  source_file.txt  test_gnl  validation.c  worse_with_double.txt  worse_without_double.txt
auxiliary_functions/: auxiliary_functions.c  auxiliary_functions2.c
common_files/: .checker.h.swp  bonuses.c  checker.c  checker.h  checker.h.gch  get_next_line.c
common_files/auxiliary_functions/: auxiliary_functions.c  auxiliary_functions2.c  auxiliary_functions3.c  auxiliary_functions4.c
common_files/libft/: author  ft_atoi.c  ft_count_word.c  ft_discharge.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_isspace.c  ft_itoa.c  ft_lstadd.c  ft_lstdel.c  ft_lstnew.c  ft_memcmp.c  ft_memdel.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_strdel.c  ft_strdup.c  ft_striter.c  ft_strlen.c  ft_strmap.c  ft_strmapi.c  ft_strncat.c  ft_strnstr.c  ft_strrchr.c  ft_strsplit.c  ft_strsub.c  ft_strtrim.c  ft_toupper.c  libft.h
common_files/moves/: push.c  reverse_rotate.c  rotate.c  swap.c
common_files/validation/: validation.c  validation2.c
ft_printf/: Makefile  additional_float.c  additional_float2.c  author  float_to_string.c  ft_analyse_flags.c  ft_float.c  ft_parse_types.c  ft_printf.h  hex_str.c  hex_str2.c  hex_str3.c  integer_to_string.c  long.c  main_ft_printf.c  minus.c  octal.c  octal2.c  plus.c  plus2.c  pointer.c  recording_other_flags.c  string_char.c  unsigned.c
ft_printf/libft/: Makefile  author  ft_atoi.c  ft_bzero.c  ft_chrchr.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlast.c  (+50 more)
libft/: Makefile  ft_lstiter.c  ft_memccpy.c  ft_memchr.c  ft_memcpy.c  ft_putstr.c  ft_strcat.c  ft_strchr.c  ft_strclr.c  ft_strcpy.c  ft_strequ.c  ft_striteri.c  ft_strjoin.c  ft_strlcat.c  ft_strlen.c  ft_strndup.c  ft_strnequ.c  ft_tolower.c  get_next_line.c  get_next_line.h  libft.h
moves/: push.c  reverse_rotate.c  rotate.c  swap.c
push_swap_files/: count_actions.c  count_double.c  has_gap.c  moves.c  push_swap.c  push_swap.h  sort.c  sort_sequence.c  throwing.c
validation/: validation.c  validation2.c
(+19 files in other folders)
